--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "outDir": "./dist/",
     "strict": true,
     "target": "es2017",
-    "types": ["./src/typings", "jest"],
+    "types": ["./src/typings", "jest", "node"],
     "downlevelIteration": true,
     "lib": ["es2015", "es2017"],
     "moduleResolution": "node",
